cmake_minimum_required(VERSION 3.16)
project(hashmap_bench VERSION 1.0.0 LANGUAGES CXX C)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

# Optimization flags
set(CMAKE_CXX_FLAGS_RELEASE "-O3")
set(CMAKE_CXX_FLAGS_DEBUG "-g")

# Build type
if(NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE Release)
endif()

# ============================================================================
# Project directories
# ============================================================================
set(EXTERNAL_DIR "${CMAKE_SOURCE_DIR}/external")
set(SRC_DIR "${CMAKE_SOURCE_DIR}/src")

# ============================================================================
# External Dependencies
# ============================================================================

# ----------------------------------------------------------------------------
# NanoLog
# ----------------------------------------------------------------------------
add_library(nanolog STATIC
    ${EXTERNAL_DIR}/NanoLog/runtime/NanoLog.cc
    ${EXTERNAL_DIR}/NanoLog/runtime/Log.cc
    ${EXTERNAL_DIR}/NanoLog/runtime/RuntimeLogger.cc
    ${EXTERNAL_DIR}/NanoLog/runtime/TimeTrace.cc
    ${EXTERNAL_DIR}/NanoLog/runtime/Cycles.cc
)
target_include_directories(nanolog PUBLIC ${EXTERNAL_DIR}/NanoLog/runtime)
target_compile_features(nanolog PUBLIC cxx_std_17)

# ----------------------------------------------------------------------------
# Abseil-cpp
# ----------------------------------------------------------------------------
set(ABSL_BUILD_TESTING OFF CACHE BOOL "" FORCE)
set(ABSL_USE_EXTERNAL_GOOGLETEST OFF CACHE BOOL "" FORCE)
add_subdirectory(${EXTERNAL_DIR}/abseil-cpp absl-cpp)

# ----------------------------------------------------------------------------
# Boost.Container (header-only)
# ----------------------------------------------------------------------------
add_library(boost_container INTERFACE)
target_include_directories(boost_container INTERFACE ${EXTERNAL_DIR}/container/include)

# ----------------------------------------------------------------------------
# Folly F14 (minimal build)
# ----------------------------------------------------------------------------
set(FOLLY_SOURCE_DIR "${EXTERNAL_DIR}/folly")

set(FOLLY_MINIMAL_SOURCES
    ${FOLLY_SOURCE_DIR}/folly/lang/SafeAssert.cpp
    ${FOLLY_SOURCE_DIR}/folly/lang/Exception.cpp
    ${FOLLY_SOURCE_DIR}/folly/lang/ToAscii.cpp
    ${FOLLY_SOURCE_DIR}/folly/lang/CString.cpp
    ${FOLLY_SOURCE_DIR}/folly/lang/UncaughtExceptions.cpp
    ${FOLLY_SOURCE_DIR}/folly/memory/Malloc.cpp
    ${FOLLY_SOURCE_DIR}/folly/container/detail/F14Table.cpp
)

add_library(folly_f14_minimal STATIC ${FOLLY_MINIMAL_SOURCES})
target_include_directories(folly_f14_minimal PUBLIC ${FOLLY_SOURCE_DIR})
target_compile_features(folly_f14_minimal PUBLIC cxx_std_20)
target_compile_definitions(folly_f14_minimal PUBLIC
    FOLLY_NO_CONFIG
    FOLLY_MOBILE=0
    FOLLY_X64=1
    FOLLY_SSE=2
    FOLLY_F14_VECTOR_INTRINSICS_AVAILABLE=1
)
target_link_libraries(folly_f14_minimal PUBLIC ${CMAKE_DL_LIBS} atomic pthread)

# ----------------------------------------------------------------------------
# rhashmap (C library)
# ----------------------------------------------------------------------------
add_library(rhashmap STATIC
    ${EXTERNAL_DIR}/rhashmap/src/rhashmap.c
    ${EXTERNAL_DIR}/rhashmap/src/murmurhash.c
    ${EXTERNAL_DIR}/rhashmap/src/siphash.c
)
target_include_directories(rhashmap PUBLIC ${EXTERNAL_DIR}/rhashmap/src)

# ----------------------------------------------------------------------------
# sparsehash (header-only)
# ----------------------------------------------------------------------------
add_library(sparsehash INTERFACE)
target_include_directories(sparsehash INTERFACE
    ${EXTERNAL_DIR}/sparsehash/src
)

# ----------------------------------------------------------------------------
# libcuckoo (header-only)
# ----------------------------------------------------------------------------
add_library(libcuckoo INTERFACE)
target_include_directories(libcuckoo INTERFACE ${EXTERNAL_DIR}/libcuckoo)

# ----------------------------------------------------------------------------
# cista (header-only)
# ----------------------------------------------------------------------------
add_library(cista INTERFACE)
target_include_directories(cista INTERFACE ${EXTERNAL_DIR}/cista/include)
target_compile_features(cista INTERFACE cxx_std_17)

# ----------------------------------------------------------------------------
# parallel-hashmap (header-only)
# ----------------------------------------------------------------------------
add_library(parallel_hashmap INTERFACE)
target_include_directories(parallel_hashmap INTERFACE ${EXTERNAL_DIR}/parallel-hashmap)

# ----------------------------------------------------------------------------
# OPIC Robin Hood Hash
# Note: OPIC has nested directory structure: opic/opic/hash/, opic/opic/malloc/
# config.h generated by autoconf
# Uses stub log4c.h from stub_includes (no log4c dependency)
# ----------------------------------------------------------------------------
set(OPIC_DIR "${EXTERNAL_DIR}/opic/opic")
add_library(opic STATIC
    ${OPIC_DIR}/hash/op_hash_table.c
    ${OPIC_DIR}/hash/cityhash.c
    ${OPIC_DIR}/malloc/op_malloc.c
    ${OPIC_DIR}/malloc/allocator.c
    ${OPIC_DIR}/malloc/deallocator.c
    ${OPIC_DIR}/malloc/init_helper.c
    ${OPIC_DIR}/malloc/lookup_helper.c
    ${OPIC_DIR}/common/op_log.c
)
target_include_directories(opic PUBLIC
    ${EXTERNAL_DIR}/stub_includes  # stub log4c.h and fixed op_assert.h (must be first)
    ${EXTERNAL_DIR}/opic
)
target_compile_options(opic PRIVATE -include stddef.h)
target_compile_definitions(opic PRIVATE HAVE_CONFIG_H)

# ----------------------------------------------------------------------------
# CLHT with ssmem and sspfd dependencies
# Note: ssmem has upstream bug - function declaration mismatch for ssmem_ts_set_collect
# ----------------------------------------------------------------------------
add_library(sspfd STATIC ${EXTERNAL_DIR}/sspfd/sspfd.c)
target_include_directories(sspfd PUBLIC ${EXTERNAL_DIR}/sspfd)

add_library(ssmem STATIC ${EXTERNAL_DIR}/ssmem/src/ssmem.c)
target_include_directories(ssmem PUBLIC 
    ${EXTERNAL_DIR}/stub_includes  # fixed ssmem.h (must be first)
    ${EXTERNAL_DIR}/ssmem/include 
    ${EXTERNAL_DIR}/sspfd
)
target_link_libraries(ssmem PUBLIC sspfd atomic pthread)

add_library(clht_lb STATIC ${EXTERNAL_DIR}/clht/src/clht_lb_res.c ${EXTERNAL_DIR}/clht/src/clht_gc.c)
target_include_directories(clht_lb PUBLIC ${EXTERNAL_DIR}/clht/include ${EXTERNAL_DIR}/ssmem/include)
target_compile_definitions(clht_lb PRIVATE _GNU_SOURCE)
target_link_libraries(clht_lb PUBLIC ssmem atomic pthread)

add_library(clht_lf STATIC ${EXTERNAL_DIR}/clht/src/clht_lf_res.c ${EXTERNAL_DIR}/clht/src/clht_gc.c)
target_include_directories(clht_lf PUBLIC ${EXTERNAL_DIR}/clht/include ${EXTERNAL_DIR}/ssmem/include)
target_compile_definitions(clht_lf PRIVATE _GNU_SOURCE)
target_link_libraries(clht_lf PUBLIC ssmem atomic pthread)

# ============================================================================
# Main executable
# ============================================================================
add_executable(hashmap_bench
    ${SRC_DIR}/hashmap_bench.cpp
    ${SRC_DIR}/benchmark.cpp
)

target_include_directories(hashmap_bench PRIVATE
    ${SRC_DIR}
    ${EXTERNAL_DIR}/NanoLog/runtime
    ${EXTERNAL_DIR}/stub_includes  # fixed ssmem.h, stub log4c.h, fixed op_assert.h
    ${EXTERNAL_DIR}/opic           # for OPIC headers
)

# Enable SIMD for CLHT string key implementations
target_compile_options(hashmap_bench PRIVATE
    -march=native
    -msse4.2
    -mavx2
)

target_link_libraries(hashmap_bench PRIVATE
    nanolog
    absl::flat_hash_map
    absl::node_hash_map
    cista
    rhashmap
    boost_container
    sparsehash
    libcuckoo
    opic
    folly_f14_minimal
    clht_lb
    clht_lf
    parallel_hashmap
    atomic
    pthread
)

# ============================================================================
# Test executable with Catch2
# ----------------------------------------------------------------------------
add_subdirectory(${EXTERNAL_DIR}/Catch2 catch2)

add_executable(hashmap_bench_test
    test/hashmap_bench_test.cpp
    ${SRC_DIR}/benchmark.cpp
)

target_include_directories(hashmap_bench_test PRIVATE
    ${SRC_DIR}
    ${EXTERNAL_DIR}/NanoLog/runtime
    ${EXTERNAL_DIR}/stub_includes  # fixed ssmem.h, stub log4c.h, fixed op_assert.h
    ${EXTERNAL_DIR}/opic           # for OPIC headers
)

target_compile_options(hashmap_bench_test PRIVATE
    -march=native
    -msse4.2
    -mavx2
)

target_link_libraries(hashmap_bench_test PRIVATE
    Catch2::Catch2WithMain
    nanolog
    absl::flat_hash_map
    absl::node_hash_map
    cista
    rhashmap
    boost_container
    sparsehash
    libcuckoo
    opic
    folly_f14_minimal
    clht_lb
    clht_lf
    parallel_hashmap
    atomic
    pthread
)

enable_testing()
add_test(NAME hashmap_bench_test COMMAND hashmap_bench_test)

# ============================================================================
# CLHT String Tests
# ============================================================================
add_executable(clht_string_test
    test/clht_string_test.cpp
)

target_include_directories(clht_string_test PRIVATE
    ${SRC_DIR}
    ${EXTERNAL_DIR}/stub_includes
    ${EXTERNAL_DIR}/opic
    ${EXTERNAL_DIR}/sparsehash/src
)

target_compile_options(clht_string_test PRIVATE
    -march=native
    -msse4.2
    -mavx2
)

target_link_libraries(clht_string_test PRIVATE
    Catch2::Catch2WithMain
    folly_f14_minimal
    clht_lb
    clht_lf
    absl::flat_hash_map
    sparsehash
    atomic
    pthread
)

add_test(NAME clht_string_test COMMAND clht_string_test)

# ============================================================================
# CLHT Benchmark Tests
# ============================================================================
add_executable(clht_benchmark_test
    test/clht_benchmark_test.cpp
)

target_include_directories(clht_benchmark_test PRIVATE
    ${SRC_DIR}
    ${EXTERNAL_DIR}/stub_includes
    ${EXTERNAL_DIR}/opic
    ${EXTERNAL_DIR}/sparsehash/src
)

target_compile_options(clht_benchmark_test PRIVATE
    -march=native
    -msse4.2
    -mavx2
)

target_link_libraries(clht_benchmark_test PRIVATE
    Catch2::Catch2WithMain
    folly_f14_minimal
    clht_lb
    clht_lf
    absl::flat_hash_map
    sparsehash
    atomic
    pthread
)

add_test(NAME clht_benchmark_test COMMAND clht_benchmark_test --benchmark-samples 10 "[clht]")

# ============================================================================
# CLHT Integer Key Tests
# ============================================================================
add_executable(clht_int_test
    test/clht_int_test.cpp
)

target_include_directories(clht_int_test PRIVATE
    ${SRC_DIR}
    ${EXTERNAL_DIR}/stub_includes
    ${EXTERNAL_DIR}/clht/include
    ${EXTERNAL_DIR}/ssmem/include
    ${EXTERNAL_DIR}/sspfd
)

target_compile_options(clht_int_test PRIVATE
    -march=native
    -msse4.2
    -mavx2
)

target_link_libraries(clht_int_test PRIVATE
    Catch2::Catch2WithMain
    clht_lb
    clht_lf
    ssmem
    atomic
    pthread
)

add_test(NAME clht_int_test COMMAND clht_int_test)

# ============================================================================
# CLHT Integer Key Benchmark Tests
# ============================================================================
add_executable(clht_int_benchmark_test
    test/clht_int_benchmark_test.cpp
)

target_include_directories(clht_int_benchmark_test PRIVATE
    ${SRC_DIR}
    ${EXTERNAL_DIR}/stub_includes
    ${EXTERNAL_DIR}/clht/include
    ${EXTERNAL_DIR}/ssmem/include
    ${EXTERNAL_DIR}/sspfd
    ${EXTERNAL_DIR}/libcuckoo
    ${EXTERNAL_DIR}/abseil-cpp
    ${EXTERNAL_DIR}/folly
)

target_compile_options(clht_int_benchmark_test PRIVATE
    -march=native
    -msse4.2
    -mavx2
)

target_link_libraries(clht_int_benchmark_test PRIVATE
    Catch2::Catch2WithMain
    clht_lb
    clht_lf
    ssmem
    absl::flat_hash_map
    folly_f14_minimal
    libcuckoo
    atomic
    pthread
)

add_test(NAME clht_int_benchmark_test COMMAND clht_int_benchmark_test --benchmark-samples 10 "[clht_int]")

# ============================================================================
# CLHT String Key Benchmark
# ============================================================================
add_executable(clht_str_bench
    ${SRC_DIR}/clht_string/clht_str_bench.cpp
)
target_include_directories(clht_str_bench PRIVATE ${SRC_DIR})
target_compile_options(clht_str_bench PRIVATE
    -march=native      # Enable AVX/SSE instructions
    -msse4.2           # CRC32 instruction
    -mavx2             # AVX2 for 32-byte SIMD
)
target_link_libraries(clht_str_bench PRIVATE atomic pthread)

# ============================================================================
# libfork - Work-stealing task scheduler (header-only)
# ============================================================================
add_library(libfork INTERFACE)
target_include_directories(libfork INTERFACE ${EXTERNAL_DIR}/libfork/include)
target_compile_features(libfork INTERFACE cxx_std_20)

# ============================================================================
# CLHT libfork Parallel Tests
# ============================================================================
add_executable(clht_libfork_test
    test/clht_libfork_test.cpp
)

target_include_directories(clht_libfork_test PRIVATE
    ${SRC_DIR}
    ${SRC_DIR}/clht_libfork
    ${SRC_DIR}/clht_string
    ${EXTERNAL_DIR}/stub_includes
    ${EXTERNAL_DIR}/clht/include
    ${EXTERNAL_DIR}/ssmem/include
    ${EXTERNAL_DIR}/sspfd
)

target_compile_options(clht_libfork_test PRIVATE
    -march=native
    -msse4.2
    -mavx2
)

target_link_libraries(clht_libfork_test PRIVATE
    Catch2::Catch2WithMain
    libfork
    clht_lb
    clht_lf
    ssmem
    folly_f14_minimal
    absl::flat_hash_map
    atomic
    pthread
)

add_test(NAME clht_libfork_test COMMAND clht_libfork_test)

# ============================================================================
# CLHT libfork Benchmark Tests
# ============================================================================
add_executable(clht_libfork_benchmark
    test/clht_libfork_benchmark.cpp
)

target_include_directories(clht_libfork_benchmark PRIVATE
    ${SRC_DIR}
    ${SRC_DIR}/clht_libfork
    ${SRC_DIR}/clht_string
    ${EXTERNAL_DIR}/stub_includes
    ${EXTERNAL_DIR}/clht/include
    ${EXTERNAL_DIR}/ssmem/include
    ${EXTERNAL_DIR}/sspfd
    ${EXTERNAL_DIR}/abseil-cpp
    ${EXTERNAL_DIR}/folly
)

target_compile_options(clht_libfork_benchmark PRIVATE
    -march=native
    -msse4.2
    -mavx2
)

target_link_libraries(clht_libfork_benchmark PRIVATE
    Catch2::Catch2WithMain
    libfork
    clht_lb
    clht_lf
    ssmem
    folly_f14_minimal
    absl::flat_hash_map
    atomic
    pthread
)

add_test(NAME clht_libfork_benchmark COMMAND clht_libfork_benchmark --benchmark-samples 10 "[clht_libfork]")

# ============================================================================
# Install
# ============================================================================
install(TARGETS hashmap_bench RUNTIME DESTINATION bin)
